--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "Home Page";
 ---
 
 <html lang="en">
@@ -7,10 +8,10 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>´ñ</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+		<a href="/">{pageTitle}</a>
 		<a href="/about/">About</a>
 		<a href="/blog/">Blog</a>
 		<h1>Astro</h1>
